<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">JFD</string>
    <string name="app_name_full">JFD - Japanese Flashcard Dictionary</string>
    <string name="app_version">App: v1.0.3</string>
    <string name="app_db_version">Database: v2</string>

    <!-- General -->
    <string name="empty">Empty</string>
    <string name="item_count">%d items</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="copy">Copy</string>
    <string name="restart">Restart</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="expand">Expand</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="theme">Theme</string>
    <string name="audio">Audio</string>
    <string name="menu">Menu</string>
    <string name="text_to_speech">Text-To-Speech</string>
    <string name="sound">Sound</string>
    <string name="about">About</string>
    <string name="copy_to_clipboard">Copied \'%s\' to clipboard.</string>

    <!-- Dictionary -->
    <string name="dictionary_hint">辞書</string>
    <string name="dictionary_results">%s results</string>
    <string name="dictionary_wait">Please wait until dictionary is finished loading.</string>
    <string name="dictionary_loading">Loading Dictionary…</string>
    <string name="dictionary_details_translation">Translation</string>
    <string name="dictionary_details_reading">Alternative Readings</string>
    <string name="dictionary_details_kanji">Kanji</string>
    <string name="dictionary_details_verb_conjugation">Verb Conjugation</string>
    <string name="dictionary_details_verb_affirmative">Affirmative</string>
    <string name="dictionary_details_verb_negative">Negative</string>
    <string name="dictionary_details_verb_present">Present</string>
    <string name="dictionary_details_verb_past">Past</string>
    <string name="dictionary_details_verb_te_form">Te-form</string>
    <string name="dictionary_details_verb_potential">Potential</string>
    <string name="dictionary_details_verb_passive">Passive</string>
    <string name="dictionary_details_verb_causative">Causative</string>
    <string name="dictionary_details_verb_imperative">Imperative</string>
    <string name="dictionary_add_to_collection">Added \'%s\' to \'%s\'.</string>
    <string name="dictionary_remove_from_collection">Removed \'%s\' from \'%s\'.</string>

    <!-- Collection -->
    <string name="collection">Collection</string>
    <string name="collection_empty">The collection is empty.</string>
    <string name="collection_content">Content</string>
    <string name="collection_import_code">Import Code</string>
    <string name="collection_user">User</string>
    <string name="collection_delete">\'%s\' was deleted.</string>
    <string name="collection_share_title">Use the import code to share or backup your collections.</string>
    <string name="collection_details_study_flashcards">Study Flashcards</string>
    <string name="collection_details_selection_title">Selection</string>
    <string name="collection_details_content_removed">%d items removed from collection.</string>
    <string name="collection_details_study_no_content">The collection is empty.\nAdd words from the dictionary to begin.</string>

    <!-- Study -->
    <string name="study_correct">Got it!</string>
    <string name="study_incorrect">Try again!</string>
    <string name="study_next_stage">Next Stage</string>
    <string name="study_stage">Stage %s</string>
    <string name="study_restart">All cards done!\nRestart?</string>

    <!-- Menu -->
    <string name="menu_item_dictionary">Dictionary</string>
    <string name="menu_item_collections">Collections</string>
    <string name="menu_item_study">Study</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_dark_mode">Dark Mode</string>
    <string name="menu_item_search">Search Dictionary</string>
    <string name="menu_item_copy_kanji">Copy Kanji</string>
    <string name="menu_item_copy_kana">Copy Kana</string>
    <string name="menu_item_collection_create">Create Collection</string>
    <string name="menu_item_collection_add">Add To Collection</string>
    <string name="menu_item_collection_new">New Collection</string>
    <string name="menu_item_collection_rename">Rename Collection</string>
    <string name="menu_item_collection_import">Import Collection</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_rename">Rename</string>
    <string name="menu_item_new_collection">New Collection</string>
    <string name="menu_item_import_collection">Import Collection</string>
    <string name="context_menu_options_title">Options for \'%s\'</string>

    <!-- Dialogs -->
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_collection_name">Name</string>
    <string name="dialog_import_info">Paste the shared import code below.</string>
    <string name="dialog_confirm_collection_delete_body">Are you sure you wish to delete this collection?</string>

    <!-- Error messages -->
    <string name="validation_error_collection_name">This name is invalid.</string>
    <string name="validation_error_collection_select">A collection must be selected.</string>
    <string name="validation_error_collection_import">Import code is invalid.</string>

    <!-- Legal -->
    <string name="copyright">Copyright © 2022 - Andreas Lill</string>
    <string name="edict">EDICT</string>
    <string name="legal_edict">This package uses the &lt;a href=\'http://www.edrdg.org/wiki/index.php/JMdict-EDICT_Dictionary_Project\'&gt;JMdict/EDICT&lt;/a&gt; and &lt;a href=\'http://www.edrdg.org/wiki/index.php/KANJIDIC_Project\'&gt;KANJIDIC&lt;/a&gt; dictionary files. These files are the property of the &lt;a href=\'http://www.edrdg.org/\'&gt;Electronic Dictionary Research and Development Group&lt;/a&gt;, and are used in conformance with the Group\'s &lt;a href=\'http://www.edrdg.org/edrdg/licence.html\'&gt;licence&lt;/a&gt;.</string>
</resources>