<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1" android:checkableBehavior="single">

        <item
            android:id="@+id/menu_item_dictionary"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_item_dictionary"
            android:checked="true"/>
        <item
            android:id="@+id/menu_item_collections"
            android:icon="@drawable/ic_collection_list"
            android:title="@string/menu_item_collections"/>

    </group>

    <group android:id="@+id/group2" android:checkableBehavior="none">

        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_item_settings"/>

        <item
            android:id="@+id/menu_item_about"
            android:title="@string/about"/>

    </group>

</menu>