<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_selection" android:visible="false">
        <item
            android:id="@+id/menu_item_selection_delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/menu_item_delete"
            app:showAsAction="ifRoom"
            />
    </group>

    <group android:id="@+id/group_default">
        <item
            android:id="@+id/menu_item_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_item_share"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/menu_item_rename"
            android:title="@string/menu_item_rename"/>
        <item
            android:id="@+id/menu_item_delete"
            android:title="@string/menu_item_delete"/>
    </group>

</menu>