<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_study"
            android:textAppearance="@style/AppStyle.TextAppearance.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            app:hintTextAppearance="@style/AppStyle.InputHintAppearance"
            app:hintTextColor="?attr/colorHint"
            app:boxBackgroundColor="?attr/colorBackground"
            app:boxStrokeColor="?attr/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:counterTextColor="?attr/colorHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorTextPrimary"
                android:textSize="14sp"
                android:inputType="textShortMessage"
                android:singleLine="true"
                android:maxLength="30" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/collection"
            app:hintTextAppearance="@style/AppStyle.InputHintAppearance"
            app:hintTextColor="?attr/colorHint"
            app:boxBackgroundColor="?attr/colorBackground"
            app:boxStrokeColor="?attr/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/input_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorTextPrimary"
                android:textSize="14sp"
                android:inputType="none"
                android:ellipsize="end"
                android:singleLine="true"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            style="@style/AppStyle.DialogButton"
            app:layout_constraintEnd_toStartOf="@+id/button_ok"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_collection"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ok"
            style="@style/AppStyle.DialogButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_collection"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>