<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorElevatedSurface"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AppStyle.TextAppearance.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            app:hintTextAppearance="@style/AppStyle.InputHintAppearance"
            app:hintTextColor="?attr/colorHint"
            app:boxBackgroundColor="?attr/colorBackground"
            app:boxStrokeColor="?attr/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:counterTextColor="?attr/colorHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:inputType="text"
                android:singleLine="true"
                android:maxLength="30"
                android:imeOptions="actionDone"
                android:textColor="?attr/colorTextPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/AppStyle.DialogButton"
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            app:rippleColor="?attr/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/button_ok"
            app:layout_constraintTop_toBottomOf="@+id/layout_input"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AppStyle.DialogButton"
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ok"
            app:rippleColor="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_input"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>