<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorElevatedSurface"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AppStyle.TextAppearance.Title"
            android:text="@string/menu_item_collection_import"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorHint"
            android:textSize="12sp"
            android:text="@string/dialog_import_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/collection_import"
            app:hintTextAppearance="@style/AppStyle.InputHintAppearance"
            app:hintTextColor="?attr/colorHint"
            app:boxBackgroundColor="?attr/colorBackground"
            app:boxStrokeColor="?attr/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_info">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="?attr/colorTextPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:visibility="gone"
            android:background="?attr/colorBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_input">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/image_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_collection_list"
                android:contentDescription="@string/collection"
                app:tint="?attr/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_50"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal_50"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/image_collection"
                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_50"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal_50">

                <TextView
                    android:id="@+id/text_collection_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorTextPrimary"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/text_collection_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorHint"
                    android:textSize="12sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:contentDescription="@null"
                app:tint="?attr/colorCheckMark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_50"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal_50"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            style="@style/AppStyle.DialogButton"
            app:layout_constraintEnd_toStartOf="@+id/button_ok"
            app:layout_constraintTop_toBottomOf="@+id/layout_collection"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/collection_import"
            style="@style/AppStyle.DialogButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_collection"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>